--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Manuel Poblete 2024. Todos los derechos reservados.</p>
+        <p class="mb-0">Manuel Poblete 2024. Todos los derechos reservados. &#169;​</p>
     </footer>
 
 
